traces/bug_45.txt
src/medit/tiles.c:192: error: DEAD_STORE
  The value written to &bitsTileOffset (type int) is never used.
Showing all 1 steps of the trace


src/medit/tiles.c:192:7: Write of unused value
190.         bitsTileRow    = tileWidthNB * bitsPixel;
191.         bitsCurTileRow = tw * bitsPixel;
192.         bitsTileOffset = border*bitsPixel;
             ^
193.         bitsTileOffset = 0;
194.         for (i=0; i<th; i++) {
